<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.boatchina.imerit.app.view.activity.SetImeiInfoActivity">
    <include layout="@layout/toolbar"/>
<TextView
    android:id="@+id/tv_imei"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    />
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
android:padding="16dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edit_imei_name"
        android:hint="@string/desc_set_nickname"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_imei_phone"
            android:hint="@string/desc_set_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_commit"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_yes"/>
</LinearLayout>
