<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.boatchina.imerit.app.view.activity.InputImeiActivity">
    <include layout="@layout/toolbar"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edit_imei"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/tip_input_imei"
        android:inputType="number"
        />
</android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:id="@+id/ll_nick"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="本人身份："/>
        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="爸爸"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_marginTop="150dp"
        android:layout_height="wrap_content"
        android:text="@string/title_scan"/>
    <Button
        android:id="@+id/btn_commit_imei"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_yes"/>
</LinearLayout>
