<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:context="com.boatchina.imerit.app.view.fragment.FindFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="117dp"
        android:layout_height="128dp"
        android:text="@string/desc_find_doctor"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginStart="24dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <TextView
        android:layout_width="238dp"
        android:layout_height="128dp"
        android:text="@string/desc_ask_doctor"
        tools:gravity="center"
        android:id="@+id/textView"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@android:color/holo_blue_light"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout" />


    <TextView
        android:layout_width="379dp"
        android:layout_height="124dp"
        android:text="@string/desc_health_fitness"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout" />


</android.support.constraint.ConstraintLayout>
